commit after change background

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!--    header-->
     <header class"mainHeader" id="header">
-      <h1 class="graphic">GRAPHIC DESIGNER</h1>
+      <h1 class="graphic">WEB DEVELOPER</h1>
       <h2 class="graphic">ILENIA PIRO'</h2>
       <p class="text-nav">Add color to your life!</p>
     </header>
@@ -109,6 +109,7 @@
     </main>
 
     <footer class"contact" id="contact">
+
       <ul class="icons">
         <li><a href="https://www.linkedin.com/in/ilenia-piro/" class="linkedin" target="_blank">
             <svg class="linkedin" fill="#000000" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50" width="30px" height="30px">
