--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Advent+Pro|Great+Vibes|Montserrat&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/modal.css">
+  <link rel="icon" type="image/png" href="svg/favicon.ico" sizes="16x16" />
   <link rel="icon" href="svg/" type="svg/favicon.ico">
 </head>
 
@@ -18,7 +20,9 @@
       <h1 class="graphic">WEB DEVELOPER</h1>
       <h2 class="graphic">ILENIA PIRO'</h2>
       <p class="text-nav">Add color to your life!</p>
-      <img class="logo" src="svg/logo-NoName.png" alt="logo">
+      <svg id="shape" height="260" viewBox="0 0 60 54" width="260" xmlns="http://www.w3.org/2000/svg">
+        <path fill="linear-gradient(red, orange);" d="m2 12 10-.9c0 5.3-.19.9 1 19 .0282078.4155849.3110706.7701593.71.89l9.75 2.92 19.82 20.78c.334652.3428854.8654846.4002235 1.2656372.1367083.4001526-.2635151.5571676-.773826.3743628-1.2167083l-7.92-18.73 1.11-6.24 2.65-2 19.39-3.8c.3839901-.0760649.6882905-.3691863.7786678-.7500619s-.0497887-.7794635-.3586678-1.0199381l-6.1-4.71 6.13-4.56c.3283205-.2313443.4863723-.6366716.4013238-1.0292035-.0850486-.3925318-.3966927-.6960918-.7913238-.7707965l-19-4c-.37-.07.8-.35-15.48 4.3-.15-.15.85.62-12.13-9.12-.3615222-.28196386-.8684778-.28196386-1.23 0l-11 9c-.36855244.2555115-.52193012.725138-.37523388 1.1489271s.55758781.6980917 1.00523388.6710729zm13 17.24-.73-10.24 7.51 12.3zm26 20.12-15.15-15.87 7.56-2.27c2.18 5.46.65 1.78 7.59 18.14zm16.68-28-13.2 2.53 8.37-6.28zm-15.88-13.17 15.83 3.33-19 14.23zm-2.07.21-4.1 23-.7-1.75c-.1673403-.508114-.7049355-.7945377-1.22-.65l-9.26 2.78-9.91-16.18zm-25.73-4.4 8.87 6.65-8.87 3zm-2 .11v5l-6.84.62z" transform="translate(-1 -1)"/>
+      </svg>
     </header>
     <!--    header-->
 
@@ -26,7 +30,7 @@
     <nav class="navbar">
       <div class="navbar-nav">
         <a class="nav-item1" href="#home" id="home">home</a>
-        <a class="nav-item2" href="#aboutme">about me</a>
+        <a class="nav-item2" href="#aboutme" id="me">about me</a>
         <a class="nav-item3" href="#portfolio">portfolio</a>
         <a class="nav-item4" href="#contact">contact</a>
       </div>
@@ -198,6 +202,20 @@
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="main.js"></script>
   </div>
+
+  <div class="modal">
+    <h1 class="modalh1" >Ilenia Piro</h1>
+    <img class="fotoIle" src="images/ilenia.jpg" alt="Ilenia">
+    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+      in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+      sunt in culpa qui officia deserunt mollit anim id est laborum."
+    </p>
+    <p class="lastP">If you are interested in chatting or want more information about what I have been working on.<br />
+       I'd love to hear from you!</p>
+    <h6>Email:<a class="emaiLink" href="mailto:ilenia.piro@gmail.com">ilenia.piro@gmail.com</a></h6>
+  </div>
+
 </body>
 
 </html>
