--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
   <link href="https://fonts.googleapis.com/css?family=Advent+Pro|Great+Vibes|Montserrat&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/modal.css">
+  <link rel="stylesheet" type="text/css" href="css/media.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link rel="icon" type="image/png" href="svg/favicon.ico" sizes="16x16" />
   <link rel="icon" href="svg/" type="svg/favicon.ico">
 </head>
 
 <body>
 
+  <!--   card-->
   <div class="overlayCard" id="overlay">
     <div class="modal" id="home">
       <p class='close' onclick=closeOverlay()>✖</p>
@@ -29,13 +32,14 @@
       <h6>Email:<a class="emaiLink" href="mailto:ilenia.piro@gmail.com">ilenia.piro@gmail.com</a></h6>
     </div>
   </div>
+  <!-- /card -->
 
   <div class="container">
 
     <!--    header-->
     <header class"mainHeader" id="header">
       <h1 class="graphic">WEB DEVELOPER</h1>
-      <h2 class="graphic">ILENIA PIRO'</h2>
+      <h2 class="graphic1">ILENIA PIRO'</h2>
       <p class="text-nav">Add color to your life!</p>
     </header>
     <!--    header-->
@@ -51,40 +55,21 @@
     </nav>
     <!--    /navbar-->
 
-    <!--    card-->
-    <div class="alertWrongChar" id="alert">
-      <div class='oCard'>
-        <p class='close' onclick=closeAlert()></p>
-        <h2 class='oCard-name'></h2>
-        <p id='errorMessage'></p>
-      </div>
-    </div>
-    <!--   /card-->
-
     <!-- portfolio      -->
     <main class"mainContent" id="main1">
 
       <div class="maintitle">
         <h3 class="porfolioM">Portfolio
-        <ul class="tools">
-          <li class="html"><svg role="img" viewBox="0 0 24 24" width="30px" height="30px" xmlns="http://www.w3.org/2000/svg">
-              <path id="htmlpath" fill="#dd4b25" d="M1.5 0h21l-1.91 21.563L11.977 24l-8.564-2.438L1.5 0zm7.031 9.75l-.232-2.718 10.059.003.23-2.622L5.412 4.41l.698 8.01h9.126l-.326 3.426-2.91.804-2.955-.81-.188-2.11H6.248l.33 4.171L12 19.351l5.379-1.443.744-8.157H8.531z" />
-            </svg>
-          </li>
-          <li><svg class="css" role="img" viewBox="0 0 24 24" width="30px" height="30px" xmlns="http://www.w3.org/2000/svg">
-              <path fill="#0273b7" d="M1.5 0h21l-1.91 21.563L11.977 24l-8.565-2.438L1.5 0zm17.09 4.413L5.41 4.41l.213 2.622 10.125.002-.255 2.716h-6.64l.24 2.573h6.182l-.366 3.523-2.91.804-2.956-.81-.188-2.11h-2.61l.29 3.855L12 19.288l5.373-1.53L18.59 4.414z" />
-            </svg>
-          </li>
-          <li class="js"><svg role="img" viewBox="0 0 24 24" width="30px" height="30px" xmlns="http://www.w3.org/2000/svg">
-              <path fill="#ebdb1a" stroke="black" d="M0 0h24v24H0V0zm22.034 18.276c-.175-1.095-.888-2.015-3.003-2.873-.736-.345-1.554-.585-1.797-1.14-.091-.33-.105-.51-.046-.705.15-.646.915-.84 1.515-.66.39.12.75.42.976.9 1.034-.676 1.034-.676 1.755-1.125-.27-.42-.404-.601-.586-.78-.63-.705-1.469-1.065-2.834-1.034l-.705.089c-.676.165-1.32.525-1.71 1.005-1.14 1.291-.811 3.541.569 4.471 1.365 1.02 3.361 1.244 3.616 2.205.24 1.17-.87 1.545-1.966 1.41-.811-.18-1.26-.586-1.755-1.336l-1.83 1.051c.21.48.45.689.81 1.109 1.74 1.756 6.09 1.666 6.871-1.004.029-.09.24-.705.074-1.65l.046.067zm-8.983-7.245h-2.248c0 1.938-.009 3.864-.009 5.805 0 1.232.063 2.363-.138 2.711-.33.689-1.18.601-1.566.48-.396-.196-.597-.466-.83-.855-.063-.105-.11-.196-.127-.196l-1.825 1.125c.305.63.75 1.172 1.324 1.517.855.51 2.004.675 3.207.405.783-.226 1.458-.691 1.811-1.411.51-.93.402-2.07.397-3.346.012-2.054 0-4.109 0-6.179l.004-.056z" />
-            </svg>
-          </li>
-        </ul>
+          <ul class="tools">
+            <li><img class="html" src="svg/html5.svg" alt="html"></li>
+            <li><img class="css" src="svg/css3.svg" alt="css"></li>
+            <li><img class="js" src="svg/javascript.svg" alt="js"></li>
+          </ul>
         </h3>
       </div>
 
       <div class="cardscene" id="portfolio">
-        <div class="card-body">
+        <div class="card-body" onclick="this.classList.toggle('flipped');">
           <div class="card1" id="card-face-front">
             <img class="cardimg" src="images/rsz_dashboard-portfolio.png" alt="Web_App-Dashboard">
             <h4 class="card-title">Web App Dashboard</h4>
@@ -93,14 +78,14 @@
             <h5 class="card-text">I have build an interactive dashboard for a web application using advanced web techniques
               including SVG graphics and JavaScript programming. Includes charts,graphics and other user interface
               components in a manner that promotes interactivity and usability.<br />
-              <br /><a href="https://ileniapiro.github.io/web_app_dashboard/" target="_blank" class="more">Learn More</a>
+              <br /><a href="https://ileniapiro.github.io/web_app_dashboard/" target="_blank" class="more">Link to GitHub</a>
             </h5>
           </div>
         </div>
       </div>
 
       <div class="cardscene">
-        <div class="card-body">
+        <div class="card-body" onclick="this.classList.toggle('flipped');">
           <div class="card2" id="card-face-front">
             <img class="cardimg" src="images/rsz_wheel_of_success_portfolio.png" alt="Game Show App">
             <h4 class="card-title">Game Show App</h4>
@@ -109,14 +94,14 @@
             <h5 class="card-text">In this project, I have create a browser version of “Wheel of Success”, a word guessing game.
               I have used HTML,CSS and in particulary Javascript to come up with a random phrase that players will try to guess by
               entering different letters into the program.<br />
-              <br /><a href="https://ileniapiro.github.io/game_show_app_v1.2/" target="_blank" class="more">Learn More</a>
+              <br /><a href="https://ileniapiro.github.io/game_show_app_v1.2/" target="_blank" class="more">Link to GitHub</a>
             </h5>
           </div>
         </div>
       </div>
 
       <div class="cardscene">
-        <div class="card-body">
+        <div class="card-body" onclick="this.classList.toggle('flipped');">
           <div class="card3" id="card-face-front">
             <img class="cardimg" src="images/rsz_photo_gallery_portfolio.png" alt="Interactive Photo Gallery">
             <h4 class="card-title">Interactive Photo Gallery</h4>
@@ -124,14 +109,14 @@
           <div class="card3" id="card-face-back">
             <h5 class="card-text">Interactive image galleries are a common feature of many websites, from photo sites to e-commerce applications.
               I have used HTML, CSS and the popular programming language JavaScript to create an interactive, searchable gallery of photos.<br />
-              <br /><a href="https://ileniapiro.github.io/photo_gallery_v4/" target="_blank" class="more">Learn More</a>
+              <br /><a href="https://ileniapiro.github.io/photo_gallery_v4/" target="_blank" class="more">Link to GitHub</a>
             </h5>
           </div>
         </div>
       </div>
 
       <div class="cardscene">
-        <div class="card-body">
+        <div class="card-body" onclick="this.classList.toggle('flipped');">
           <div class="card4" id="card-face-front">
             <img class="cardimg" src="images/rsz_registration_form_portfolio.png" alt="Online Registration Form">
             <h4 class="card-title">Online Registration Form</h4>
@@ -140,14 +125,14 @@
             <h5 class="card-text">Web forms appear everywhere online: forms allow users to order books, sign up for websites, post to Facebook,
               buy your favorite shoes. This project show how I have build a responsive, mobile-first registration form using a variety of
               HTML form elements.<br />
-              <br /><a href="https://ileniapiro.github.io/online_registration_v4/" target="_blank" class="more">Learn More</a>
+              <br /><a href="https://ileniapiro.github.io/online_registration_v4/" target="_blank" class="more">Link to GitHub</a>
             </h5>
           </div>
         </div>
       </div>
 
       <div class="cardscene">
-        <div class="card-body">
+        <div class="card-body" onclick="this.classList.toggle('flipped');">
           <div class="card5" id="card-face-front">
             <img class="cardimg" src="images/rsz_responsive_layout.png" alt="Mobile Responsive Layout">
             <h4 class="card-title">Mobile Responsive Layout</h4>
@@ -156,14 +141,14 @@
             <h5 class="card-text">Designing web pages that look and function well on multiple screen sizes is an essential skill for a web developer.
               I have used HTML, CSS, and responsive design, to create a mobile-first web page with a layout that adjusts to fit mobile phones,
               tablets, and desktop displays.<br />
-              <br /><a href="https://ileniapiro.github.io/responsive_layout_v3/" target="_blank" class="more">Learn More</a>
+              <br /><a href="https://ileniapiro.github.io/responsive_layout_v3/" target="_blank" class="more">Link to GitHub</a>
             </h5>
           </div>
         </div>
       </div>
 
       <div class="cardscene">
-        <div class="card-body">
+        <div class="card-body" onclick="this.classList.toggle('flipped');">
           <div class="card6" id="card-face-front">
             <img class="cardimg" src="images/cs-hackmind-done.png" alt="Coming Soon Page">
             <h4 class="card-title">Coming Soon Page</h4>
@@ -171,7 +156,7 @@
           <div class="card6" id="card-face-back">
             <h5 class="card-text">Making a lasting impression on anyone who lands on your site while you are under maintenance or coming soon page
               is essential. I have build a Coming Soon Page fully responsive, it works from large desktops to mobile devices screens.<br />
-              <br /><a href="https://ileniapiro.github.io/coming-soon_hackmind/" target="_blank" class="more">Learn More</a>
+              <br /><a href="https://ileniapiro.github.io/coming-soon_hackmind/" target="_blank" class="more">Link to GitHub</a>
             </h5>
           </div>
         </div>
@@ -181,40 +166,47 @@
     <footer class"contact" id="contact">
 
       <ul class="icons">
-        <li><a href="https://www.linkedin.com/in/ilenia-piro/" class="linkedin" target="_blank">
-            <svg role="img" viewBox="0 0 24 24" width="30px" height="30px" xmlns="http://www.w3.org/2000/svg">
+        <li><a href="https://www.linkedin.com/in/ilenia-piro/" target="_blank">
+            <svg class="linkedin icon" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z" />
             </svg>
           </a>
         </li>
 
-        <li><a href="https://github.com/ileniapiro" class="github" target="_blank">
-            <svg role="img" viewBox="0 0 24 24" width="30px" height="30px" xmlns="http://www.w3.org/2000/svg">
+        <li><a href="https://github.com/ileniapiro" target="_blank">
+            <svg class="github icon" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" />
             </svg>
           </a>
         </li>
 
-        <li><a href="https://www.instagram.com/ile131280/?hl=en" class="instagram" target="_blank">
-            <svg role="img" viewBox="0 0 24 24" width="30px" height="30px" xmlns="http://www.w3.org/2000/svg">
+        <li><a href="https://www.instagram.com/ile131280/?hl=en" target="_blank">
+            <svg class="instagram icon" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M12 0C8.74 0 8.333.015 7.053.072 5.775.132 4.905.333 4.14.63c-.789.306-1.459.717-2.126 1.384S.935 3.35.63 4.14C.333 4.905.131 5.775.072 7.053.012 8.333 0 8.74 0 12s.015 3.667.072 4.947c.06 1.277.261 2.148.558 2.913.306.788.717 1.459 1.384 2.126.667.666 1.336 1.079 2.126 1.384.766.296 1.636.499 2.913.558C8.333 23.988 8.74 24 12 24s3.667-.015 4.947-.072c1.277-.06 2.148-.262 2.913-.558.788-.306 1.459-.718 2.126-1.384.666-.667 1.079-1.335 1.384-2.126.296-.765.499-1.636.558-2.913.06-1.28.072-1.687.072-4.947s-.015-3.667-.072-4.947c-.06-1.277-.262-2.149-.558-2.913-.306-.789-.718-1.459-1.384-2.126C21.319 1.347 20.651.935 19.86.63c-.765-.297-1.636-.499-2.913-.558C15.667.012 15.26 0 12 0zm0 2.16c3.203 0 3.585.016 4.85.071 1.17.055 1.805.249 2.227.415.562.217.96.477 1.382.896.419.42.679.819.896 1.381.164.422.36 1.057.413 2.227.057 1.266.07 1.646.07 4.85s-.015 3.585-.074 4.85c-.061 1.17-.256 1.805-.421 2.227-.224.562-.479.96-.899 1.382-.419.419-.824.679-1.38.896-.42.164-1.065.36-2.235.413-1.274.057-1.649.07-4.859.07-3.211 0-3.586-.015-4.859-.074-1.171-.061-1.816-.256-2.236-.421-.569-.224-.96-.479-1.379-.899-.421-.419-.69-.824-.9-1.38-.165-.42-.359-1.065-.42-2.235-.045-1.26-.061-1.649-.061-4.844 0-3.196.016-3.586.061-4.861.061-1.17.255-1.814.42-2.234.21-.57.479-.96.9-1.381.419-.419.81-.689 1.379-.898.42-.166 1.051-.361 2.221-.421 1.275-.045 1.65-.06 4.859-.06l.045.03zm0 3.678c-3.405 0-6.162 2.76-6.162 6.162 0 3.405 2.76 6.162 6.162 6.162 3.405 0 6.162-2.76 6.162-6.162 0-3.405-2.76-6.162-6.162-6.162zM12 16c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4zm7.846-10.405c0 .795-.646 1.44-1.44 1.44-.795 0-1.44-.646-1.44-1.44 0-.794.646-1.439 1.44-1.439.793-.001 1.44.645 1.44 1.439z" />
+              <linearGradient id="my-cool-gradient" x2="1" y2="1">
+                <stop offset="0%" stop-color="#7b19bc" />
+                <stop offset="50%" stop-color="#e5206f" />
+                <stop offset="75%" stop-color="#f03d38" />
+                <stop offset="90%" stop-color="#f27e29" />
+                <stop offset="100%" stop-color="#f9bd4b" />
+              </linearGradient>
             </svg>
           </a>
         </li>
 
-        <li><a href="https://www.facebook.com/ilenia.piro.1" class="facebook" target="_blank">
-            <svg role="img" viewBox="0 0 24 24" width="30px" height="30px" xmlns="http://www.w3.org/2000/svg">
+        <li><a href="https://www.facebook.com/ilenia.piro.1" target="_blank">
+            <svg class="facebook icon" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M23.9981 11.9991C23.9981 5.37216 18.626 0 11.9991 0C5.37216 0 0 5.37216 0 11.9991C0 17.9882 4.38789 22.9522 10.1242 23.8524V15.4676H7.07758V11.9991H10.1242V9.35553C10.1242 6.34826 11.9156 4.68714 14.6564 4.68714C15.9692 4.68714 17.3424 4.92149 17.3424 4.92149V7.87439H15.8294C14.3388 7.87439 13.8739 8.79933 13.8739 9.74824V11.9991H17.2018L16.6698 15.4676H13.8739V23.8524C19.6103 22.9522 23.9981 17.9882 23.9981 11.9991Z" />
             </svg>
           </a>
         </li>
 
-        <li><a href="https://twitter.com/IleniaPiro" class="twitter" target="_blank">
-            <svg role="img" viewBox="0 0 24 24" width="30px" height="30px" xmlns="http://www.w3.org/2000/svg">
+        <li><a href="https://twitter.com/IleniaPiro" target="_blank">
+            <svg class="twitter icon" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M23.954 4.569c-.885.389-1.83.654-2.825.775 1.014-.611 1.794-1.574 2.163-2.723-.951.555-2.005.959-3.127 1.184-.896-.959-2.173-1.559-3.591-1.559-2.717 0-4.92 2.203-4.92 4.917 0 .39.045.765.127 1.124C7.691 8.094 4.066 6.13 1.64 3.161c-.427.722-.666 1.561-.666 2.475 0 1.71.87 3.213 2.188 4.096-.807-.026-1.566-.248-2.228-.616v.061c0 2.385 1.693 4.374 3.946 4.827-.413.111-.849.171-1.296.171-.314 0-.615-.03-.916-.086.631 1.953 2.445 3.377 4.604 3.417-1.68 1.319-3.809 2.105-6.102 2.105-.39 0-.779-.023-1.17-.067 2.189 1.394 4.768 2.209 7.557 2.209 9.054 0 13.999-7.496 13.999-13.986 0-.209 0-.42-.015-.63.961-.689 1.8-1.56 2.46-2.548l-.047-.02z" />
             </svg>
@@ -228,8 +220,10 @@
     </footer>
 
     <!-- /portfolio      -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
+
   </div>
 
 </body>
