--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/modal.css">
   <link rel="stylesheet" type="text/css" href="css/media.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link rel="icon" type="image/png" href="svg/favicon.ico" sizes="16x16" />
   <link rel="icon" href="svg/" type="svg/favicon.ico">
 </head>
@@ -40,7 +39,8 @@
     <header class"mainHeader" id="header">
       <h1 class="graphic">WEB DEVELOPER</h1>
       <h2 class="graphic1">ILENIA PIRO'</h2>
-      <p class="text-nav">Add color to your life!</p>
+      <p class="text-nav">Color your life!</p> 
+
     </header>
     <!--    header-->
 
