modal window corrected

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <h5 class="card-text">I have build an interactive dashboard for a web application using advanced web techniques
               including SVG graphics and JavaScript programming. Includes charts,graphics and other user interface
               components in a manner that promotes interactivity and usability.<br />
-              <br /><a href="https://ileniapiro.github.io/web_app_dashboard/" target="_blank" class="more">Link to GitHub</a>
+              <br /><a href="https://ileniapiro.github.io/web_app_dashboard/" target="_blank" class="more">Link to GitHub Website</a>
             </h5>
           </div>
         </div>
@@ -94,7 +94,7 @@
             <h5 class="card-text">In this project, I have create a browser version of “Wheel of Success”, a word guessing game.
               I have used HTML,CSS and in particulary Javascript to come up with a random phrase that players will try to guess by
               entering different letters into the program.<br />
-              <br /><a href="https://ileniapiro.github.io/game_show_app_v1.2/" target="_blank" class="more">Link to GitHub</a>
+              <br /><a href="https://ileniapiro.github.io/game_show_app_v1.2/" target="_blank" class="more">Link to GitHub Website</a>
             </h5>
           </div>
         </div>
@@ -109,7 +109,7 @@
           <div class="card3" id="card-face-back">
             <h5 class="card-text">Interactive image galleries are a common feature of many websites, from photo sites to e-commerce applications.
               I have used HTML, CSS and the popular programming language JavaScript to create an interactive, searchable gallery of photos.<br />
-              <br /><a href="https://ileniapiro.github.io/photo_gallery_v4/" target="_blank" class="more">Link to GitHub</a>
+              <br /><a href="https://ileniapiro.github.io/photo_gallery_v4/" target="_blank" class="more">Link to GitHub Website</a>
             </h5>
           </div>
         </div>
@@ -125,7 +125,7 @@
             <h5 class="card-text">Web forms appear everywhere online: forms allow users to order books, sign up for websites, post to Facebook,
               buy your favorite shoes. This project show how I have build a responsive, mobile-first registration form using a variety of
               HTML form elements.<br />
-              <br /><a href="https://ileniapiro.github.io/online_registration_v4/" target="_blank" class="more">Link to GitHub</a>
+              <br /><a href="https://ileniapiro.github.io/online_registration_v4/" target="_blank" class="more">Link to GitHub Website</a>
             </h5>
           </div>
         </div>
@@ -141,7 +141,7 @@
             <h5 class="card-text">Designing web pages that look and function well on multiple screen sizes is an essential skill for a web developer.
               I have used HTML, CSS, and responsive design, to create a mobile-first web page with a layout that adjusts to fit mobile phones,
               tablets, and desktop displays.<br />
-              <br /><a href="https://ileniapiro.github.io/responsive_layout_v3/" target="_blank" class="more">Link to GitHub</a>
+              <br /><a href="https://ileniapiro.github.io/responsive_layout_v3/" target="_blank" class="more">Link to GitHub Website</a>
             </h5>
           </div>
         </div>
@@ -156,7 +156,7 @@
           <div class="card6" id="card-face-back">
             <h5 class="card-text">Making a lasting impression on anyone who lands on your site while you are under maintenance or coming soon page
               is essential. I have build a Coming Soon Page fully responsive, it works from large desktops to mobile devices screens.<br />
-              <br /><a href="https://ileniapiro.github.io/coming-soon_hackmind/" target="_blank" class="more">Link to GitHub</a>
+              <br /><a href="https://ileniapiro.github.io/coming-soon_hackmind/" target="_blank" class="more">Link to GitHub Website</a>
             </h5>
           </div>
         </div>
