commit after check the code on Html Checker and JSHint

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div class="container">
 
     <!--    header-->
-    <header class"mainHeader" id="header">
+    <header class="mainHeader" id="header">
       <h1 class="graphic">WEB DEVELOPER</h1>
       <h2 class="graphic1">ILENIA PIRO'</h2>
       <p class="text-nav">Color your life!</p>
@@ -56,25 +56,24 @@
     <!--    /navbar-->
 
     <!-- portfolio      -->
-    <main class"mainContent" id="main1">
+    <main class="mainContent">
 
       <div class="maintitle">
-        <h3 class="porfolioM">Portfolio
+        <h3 class="porfolioM">Portfolio</h3>
           <ul class="tools">
             <li><img class="html" src="svg/html5.svg" alt="html"></li>
             <li><img class="css" src="svg/css3.svg" alt="css"></li>
             <li><img class="js" src="svg/javascript.svg" alt="js"></li>
           </ul>
-        </h3>
       </div>
 
       <div class="cardscene" id="portfolio">
         <div class="card-body" onclick="this.classList.toggle('flipped');">
-          <div class="card1" id="card-face-front">
+          <div class="card1" id="card-face-front1a">
             <img class="cardimg" src="images/rsz_dashboard-portfolio.png" alt="Web_App-Dashboard">
             <h4 class="card-title">Web App Dashboard</h4>
           </div>
-          <div class="card1" id="card-face-back">
+          <div class="card1" id="card-face-back1b">
             <h5 class="card-text">I have build an interactive dashboard for a web application using advanced web techniques
               including SVG graphics and JavaScript programming. Includes charts,graphics and other user interface
               components in a manner that promotes interactivity and usability.<br />
@@ -86,11 +85,11 @@
 
       <div class="cardscene">
         <div class="card-body" onclick="this.classList.toggle('flipped');">
-          <div class="card2" id="card-face-front">
+          <div class="card2" id="card-face-front2a">
             <img class="cardimg" src="images/rsz_wheel_of_success_portfolio.png" alt="Game Show App">
             <h4 class="card-title">Game Show App</h4>
           </div>
-          <div class="card2" id="card-face-back">
+          <div class="card2" id="card-face-back2b">
             <h5 class="card-text">In this project, I have create a browser version of “Wheel of Success”, a word guessing game.
               I have used HTML,CSS and in particulary Javascript to come up with a random phrase that players will try to guess by
               entering different letters into the program.<br />
@@ -102,11 +101,11 @@
 
       <div class="cardscene">
         <div class="card-body" onclick="this.classList.toggle('flipped');">
-          <div class="card3" id="card-face-front">
+          <div class="card3" id="card-face-front3a">
             <img class="cardimg" src="images/rsz_photo_gallery_portfolio.png" alt="Interactive Photo Gallery">
             <h4 class="card-title">Interactive Photo Gallery</h4>
           </div>
-          <div class="card3" id="card-face-back">
+          <div class="card3" id="card-face-back3b">
             <h5 class="card-text">Interactive image galleries are a common feature of many websites, from photo sites to e-commerce applications.
               I have used HTML, CSS and the popular programming language JavaScript to create an interactive, searchable gallery of photos.<br />
               <br /><a href="https://ileniapiro.github.io/photo_gallery_v4/" target="_blank" class="more">Link to GitHub Website</a>
@@ -117,11 +116,11 @@
 
       <div class="cardscene">
         <div class="card-body" onclick="this.classList.toggle('flipped');">
-          <div class="card4" id="card-face-front">
+          <div class="card4" id="card-face-front4a">
             <img class="cardimg" src="images/rsz_registration_form_portfolio.png" alt="Online Registration Form">
             <h4 class="card-title">Online Registration Form</h4>
           </div>
-          <div class="card4" id="card-face-back">
+          <div class="card4" id="card-face-back4b">
             <h5 class="card-text">Web forms appear everywhere online: forms allow users to order books, sign up for websites, post to Facebook,
               buy your favorite shoes. This project show how I have build a responsive, mobile-first registration form using a variety of
               HTML form elements.<br />
@@ -133,11 +132,11 @@
 
       <div class="cardscene">
         <div class="card-body" onclick="this.classList.toggle('flipped');">
-          <div class="card5" id="card-face-front">
+          <div class="card5" id="card-face-front5a">
             <img class="cardimg" src="images/rsz_responsive_layout.png" alt="Mobile Responsive Layout">
             <h4 class="card-title">Mobile Responsive Layout</h4>
           </div>
-          <div class="card5" id="card-face-back">
+          <div class="card5" id="card-face-back5b">
             <h5 class="card-text">Designing web pages that look and function well on multiple screen sizes is an essential skill for a web developer.
               I have used HTML, CSS, and responsive design, to create a mobile-first web page with a layout that adjusts to fit mobile phones,
               tablets, and desktop displays.<br />
@@ -149,11 +148,11 @@
 
       <div class="cardscene">
         <div class="card-body" onclick="this.classList.toggle('flipped');">
-          <div class="card6" id="card-face-front">
+          <div class="card6" id="card-face-front6a">
             <img class="cardimg" src="images/cs-hackmind-done.png" alt="Coming Soon Page">
             <h4 class="card-title">Coming Soon Page</h4>
           </div>
-          <div class="card6" id="card-face-back">
+          <div class="card6" id="card-face-back6b">
             <h5 class="card-text">Making a lasting impression on anyone who lands on your site while you are under maintenance or coming soon page
               is essential. I have build a Coming Soon Page fully responsive, it works from large desktops to mobile devices screens.<br />
               <br /><a href="https://ileniapiro.github.io/coming-soon_hackmind/" target="_blank" class="more">Link to GitHub Website</a>
@@ -163,7 +162,7 @@
       </div>
     </main>
 
-    <footer class"contact" id="contact">
+    <footer class="contact" id="contact">
 
       <ul class="icons">
         <li><a href="https://www.linkedin.com/in/ilenia-piro/" target="_blank">
@@ -215,7 +214,7 @@
 
       </ul>
       <div class="copyright">
-        <p class="copyright"> Copyright &copy 2020 Ilenia Piro </p>
+        <p class="copyright"> &copy;Copyright 2020 Ilenia Piro </p>
       </div>
     </footer>
 
